--- a/lib/app/views/BikeRodeo.erb
+++ b/lib/app/views/BikeRodeo.erb
@@ -1,47 +1,78 @@
-<div id="content-w2">	
-		
-		
+<div id="content-w2">
+        <div id="system-message-container"></div>
 
-		
-		
-<div id="system-message-container">
-</div>
-		<div class="item-page">
+        <div class="item-page">
+            <h2>Bike Rodeo</h2>
 
-	<h2>
-			Bike Rodeo		</h2>
+            <p><br>
+            <img alt="" src=
+            "/images/Photos/2011_0507_bike_depot_rodeo_0653.jpg" style=
+            "height: 201px; width: 400px; margin-left: 10px; margin-right: 10px; float: left;">
+            <span style="text-align: justify; font-size: 14px;">The Bike Depot
+            is committed to creating life-long bicyclists through our Bike
+            Rodeo program. Each&nbsp;month, the Bike Depot hands up bicycles to
+            about 15 low-income families. &nbsp;On the day of the
+            Rodeo,&nbsp;the entire family participates in our Bike Rodeo class,
+            which focuses on bicycle safety and maintenance.</span><span style=
+            "text-align: justify; font-size: 14px;">The class includes a
+            hands-on portion where the youngsters’ new skills are put to the
+            test by patching a&nbsp;tube. &nbsp;Each child is fitted to his/her
+            new bicycle and also receives a new helmet and lock. Youth who
+            go&nbsp;through the program are allowed to ‘trade up’ their bike
+            for another refurbished bicycle when they have&nbsp;outgrown their
+            bicycle. &nbsp;The program is open to low-income families, children
+            3-13 years of age. &nbsp;Youth&nbsp;14 and up can also receive a
+            bicycle by participating in our adult Earn A Bike
+            program.</span></p>
 
+            <p>&nbsp;</p>
 
+            <p><img alt="" src=
+            "/images/Photos/207477_10150143954826150_6691946_n%20square.jpg"
+            style=
+            "float: right; height: 200px; width: 200px; margin-left: 10px; margin-right: 10px;"></p>
 
+            <p><span style="font-size:16px;"><strong>How does the Program
+            work?</strong></span></p>
 
+            <p style="text-align: justify;"><span style=
+            "font-size:14px;">Parents sign up their family to participate in
+            the Bike Rodeo program by either calling or coming to the&nbsp;Bike
+            Depot. When it’s your turn, we’ll give you a call to invite you to
+            the next Bike Rodeo. &nbsp;Bike Depot&nbsp;volunteers will
+            refurbish donated bicycles based on the height and gender of the
+            children. On the day&nbsp;of the Rodeo, everyone will come to the
+            Bike Depot – both parents and children. &nbsp;One of our
+            volunteer&nbsp;instructors will teach the Bike Rodeo class and then
+            we’ll hand out everyone’s bicycles, helmets and&nbsp;locks. It’s as
+            simple as that. Please note that during the warmer months, you may
+            wait up to three&nbsp;months to receive a bicycle for your
+            child.</span></p>
 
+            <p>&nbsp;</p>
 
+            <p><img alt="" src=
+            "/images/Photos/74327_445857621149_3041310_n.jpg" style=
+            "height: 136px; width: 300px; margin-left: 10px; margin-right: 10px; float: left;"></p>
 
+            <p><span style="font-size:16px;"><strong>Are you ready to Sign
+            Up?</strong></span></p>
 
-<p>
-	<br><img alt="" src="/images/Photos/2011_0507_bike_depot_rodeo_0653.jpg" style="height: 201px; width: 400px; margin-left: 10px; margin-right: 10px; float: left; "><span style="text-align: justify; font-size: 14px; ">The Bike Depot is committed to creating life-long bicyclists through our Bike Rodeo program. Each month, the Bike Depot hands up bicycles to about 15 low-income families.  On the day of the Rodeo, the entire family participates in our Bike Rodeo class, which focuses on bicycle safety and maintenance.</span><span style="text-align: justify; font-size: 14px; ">The class includes a hands-on portion where the youngsters’ new skills are put to the test by patching a tube.  Each child is fitted to his/her new bicycle and also receives a new helmet and lock. Youth who go through the program are allowed to ‘trade up’ their bike for another refurbished bicycle when they have outgrown their bicycle.  The program is open to low-income families, children 3-13 years of age.  Youth 14 and up can also receive a bicycle by participating in our adult Earn A Bike program.</span></p>
-<p>
-	 </p>
-<p>
-	<img alt="" src="/images/Photos/207477_10150143954826150_6691946_n%20square.jpg" style="float: right; height: 200px; width: 200px; margin-left: 10px; margin-right: 10px; "></p>
-<p>
-	<span style="font-size:16px;"><strong>How does the Program work?</strong></span></p>
-<p style="text-align: justify;">
-	<span style="font-size:14px;">Parents sign up their family to participate in the Bike Rodeo program by either calling or coming to the Bike Depot. When it’s your turn, we’ll give you a call to invite you to the next Bike Rodeo.  Bike Depot volunteers will refurbish donated bicycles based on the height and gender of the children. On the day of the Rodeo, everyone will come to the Bike Depot – both parents and children.  One of our volunteer instructors will teach the Bike Rodeo class and then we’ll hand out everyone’s bicycles, helmets and locks. It’s as simple as that. Please note that during the warmer months, you may wait up to three months to receive a bicycle for your child.</span></p>
-<p>
-	 </p>
-<p>
-	<img alt="" src="/images/Photos/74327_445857621149_3041310_n.jpg" style="height: 136px; width: 300px; margin-left: 10px; margin-right: 10px; float: left; "></p>
-<p>
-	<span style="font-size:16px;"><strong>Are you ready to Sign Up?</strong></span></p>
-<p style="text-align: justify;">
-	<span style="font-size:14px;">Please call or stop by the by the Bike Depot to sign up. We will ask you for the following information:  Your name, address, phone number, your child’s name, your child’s gender and your child’s height.  If you do not know your child’s height, please come to the shop to sign up and we can measure them on the spot.  It’s important that we get an accurate height so that we can properly match up their bicycle and get the best fit for a comfortable ride. Also, please provide a phone number that you are positive will be working in the next few months and has a working voicemail so that we can get in touch with you when it’s your turn.</span></p>
-<p>
-	 </p>
-<p>
-	 </p>
- 
-	
-</div>
+            <p style="text-align: justify;"><span style=
+            "font-size:14px;">Please call or stop by the by the Bike Depot to
+            sign up. We will ask you for the following information: &nbsp;Your
+            name, address, phone number, your child’s name, your child’s gender
+            and your child’s height. &nbsp;If you do not know your child’s
+            height, please come to the shop to sign up and we can measure them
+            on the&nbsp;spot. &nbsp;It’s important that we get an accurate
+            height so that we can properly match up their bicycle and&nbsp;get
+            the best fit for a comfortable ride. Also, please provide a phone
+            number that you are positive will be&nbsp;working in the next few
+            months and has a working voicemail so that we can get in touch with
+            you when&nbsp;it’s your turn.</span></p>
 
-	</div>
+            <p>&nbsp;</p>
+
+            <p>&nbsp;</p>
+        </div>
+    </div>
