--- a/lib/app/views/BikeShop.erb
+++ b/lib/app/views/BikeShop.erb
@@ -1,56 +1,77 @@
-<div id="content-w2">	
-		
-		
+<div id="content-w2">
+        <div id="system-message-container"></div>
 
-		
-		
-<div id="system-message-container">
-</div>
-		<div class="item-page">
+        <div class="item-page">
+            <h2>Bike Shop</h2>
 
-	<h2>
-			Bike Shop		</h2>
+            <p style="text-align: justify;"><span style="font-size:14px;">The
+            Bike Depot shop directly supports our nonprofit mission and is a
+            fundamental piece of our drive to be self-sustaining. &nbsp;By
+            purchasing your bikes, parts, accessories and getting your service
+            from the Bike Depot and you are supporting cycling in Denver for
+            everyone. &nbsp;</span></p>
 
+            <div>
+                &nbsp;
+            </div>
 
+            <div>
+                <span style="font-size:18px;"><strong><a href=
+                "erb/bike-shop/retail">Retail</a></strong></span>
+            </div>
 
+            <p><img alt="" src=
+            "/images/Photos/35128_409394901149_1362348_n.jpg" style=
+            "height: 187px; width: 250px; margin-left: 10px; margin-right: 10px; float: right;"></p>
 
+            <div>
+                &nbsp;
+            </div>
 
+            <div style="text-align: justify;">
+                <span style="font-size:14px;">The Bike Depot has many new
+                bikes, child carriers and accessories in stock at all times
+                including Origin 8, Bo Bike thingy and Brand New –
+                Xtracycle!</span>
+            </div>
 
+            <div style="text-align: justify;">
+                &nbsp;
+            </div>
 
+            <div style="text-align: justify;">
+                <span style="font-size:14px;">We are also certified dealers of
+                Electra Surly, Shimano, Chariot, Burley, Bob, plus many more.
+                &nbsp;Due to our size, we cannot keep these in stock, but can
+                order most any items from these lines and when you order from
+                us, you are supporting cycling in your community.</span>
+            </div>
 
-<p style="text-align: justify;">
-	<span style="font-size:14px;">The Bike Depot shop directly supports our nonprofit mission and is a fundamental piece of our drive to be self-sustaining.  By purchasing your bikes, parts, accessories and getting your service from the Bike Depot and you are supporting cycling in Denver for everyone.  </span></p>
-<div>
-	 </div>
-<div>
-	<span style="font-size:18px;"><strong><a href="erb/bike-shop/retail">Retail</a></strong></span>
-</div>
-<p>
-	<img alt="" src="/images/Photos/35128_409394901149_1362348_n.jpg" style="height: 187px; width: 250px; margin-left: 10px; margin-right: 10px; float: right; "></p>
-<div>
-	 </div>
-<div style="text-align: justify;">
-	<span style="font-size:14px;">The Bike Depot has many new bikes, child carriers and accessories in stock at all times including Origin 8, Bo Bike thingy and Brand New – Xtracycle!</span>
-</div>
-<div style="text-align: justify;">
-	 </div>
-<div style="text-align: justify;">
-	<span style="font-size:14px;">We are also certified dealers of Electra Surly, Shimano, Chariot, Burley, Bob, plus many more.  Due to our size, we cannot keep these in stock, but can order most any items from these lines and when you order from us, you are supporting cycling in your community.</span>
-</div>
-<div>
-	 </div>
-<div>
-	 </div>
-<div>
-	<img alt="" src="/images/Photos/540391_10150653509911150_1578378159_n.jpg" style="height: 150px; width: 224px; margin-left: 10px; margin-right: 10px; float: left; "><span style="font-size:18px;"><strong><a href="http://www.thebikedepot.org/betasiteerb/bike-shop/service">Service</a></strong></span>
-</div>
-<div>
-	 </div>
-<div style="text-align: justify;">
-	<span style="font-size:14px;">Have your repairs and seasonal tune-ups done by our staff of experienced mechanics.  It doesn’t matter how new or old, flashy or rusty, we give all bikes equal love and will get your bicycle back into tip-top shape or help you keep it there.  </span>
-</div>
- 
-	
-</div>
+            <div>
+                &nbsp;
+            </div>
 
-	</div>
+            <div>
+                &nbsp;
+            </div>
+
+            <div>
+                <img alt="" src=
+                "/images/Photos/540391_10150653509911150_1578378159_n.jpg"
+                style=
+                "height: 150px; width: 224px; margin-left: 10px; margin-right: 10px; float: left;"><span style="font-size:18px;"><strong><a href="http://www.thebikedepot.org/betasiteerb/bike-shop/service">Service</a></strong></span>
+            </div>
+
+            <div>
+                &nbsp;
+            </div>
+
+            <div style="text-align: justify;">
+                <span style="font-size:14px;">Have your repairs and seasonal
+                tune-ups done by our staff of experienced mechanics. &nbsp;It
+                doesn’t matter how new or old, flashy or rusty, we give all
+                bikes equal love and will get your bicycle back into tip-top
+                shape or help you keep it there. &nbsp;</span>
+            </div>
+        </div>
+    </div>
