--- a/lib/app/views/BillDavis.erb
+++ b/lib/app/views/BillDavis.erb
@@ -1,27 +1,15 @@
-<div id="content-w2">	
-		
-		
+<div id="content-w2">
+        <div id="system-message-container"></div>
 
-		
-		
-<div id="system-message-container">
-</div>
-		<div class="item-page">
+        <div class="item-page">
+            <h2>Bill Davis</h2>
 
-	<h2>
-			Bill Davis		</h2>
-
-
-
-
-
-
-
-
-<p style="text-align: justify;">
-	<span style="font-size:14px;">Bill Davis, AKA The Bike Cowboy, is an avid biker and year round commuter. A Native Coloradan from the Aspen area, Bill started out in the Earn A Bike program then became a volunteer and is now a full-fledged mechanic. His big plan this winter is to build the 'Ultimate Trail Shredder' so that he can tear the mountains down come spring.</span></p>
- 
-	
-</div>
-
-	</div>
+            <p style="text-align: justify;"><span style="font-size:14px;">Bill
+            Davis, AKA The Bike Cowboy, is an avid biker and year round
+            commuter. A Native Coloradan from the Aspen area, Bill started out
+            in the Earn A Bike program then became a volunteer and is now a
+            full-fledged mechanic. His big plan this winter is to build the
+            'Ultimate Trail Shredder' so that he can tear the mountains down
+            come spring.</span></p>
+        </div>
+    </div>
