--- a/lib/app/views/Friends.erb
+++ b/lib/app/views/Friends.erb
@@ -1,47 +1,75 @@
-<div id="content-w2">	
-		
-		
+<div id="content-w2">
+        <div id="system-message-container"></div>
 
-		
-		
-<div id="system-message-container">
-</div>
-		<div class="item-page">
+        <div class="item-page">
+            <h2>Friends</h2>
 
-	<h2>
-			Friends		</h2>
+            <p style="text-align: center;"><span style=
+            "font-size:14px;"><a href=
+            "http://www.denvergov.org/bikeprogram/BicyclinginDenver/BikeSafety/RegisterYourBike/tabid/442270/Default.aspx"
+            style="font-size: 16px;" target="_blank" title=
+            "Register your bike">Register your bike</a></span></p>
 
+            <p style="text-align: center;"><span style=
+            "font-size:14px;"><a href="http://www.bikedenver.org/" style=
+            "font-size: 16px;" target="_blank" title="Bike Denver">Bike
+            Denver</a></span></p>
 
+            <p style="text-align: center;"><span style=
+            "font-size:14px;"><a href=
+            "http://www.neighborhoodlink.com/Greater_Park_Hill/pages/60427"
+            style="font-size: 16px;" target="_blank" title=
+            "Hiawatha Davis Recreation Center">Hiawatha Davis Recreation
+            Center</a></span></p>
 
+            <p style="text-align: center;"><span style=
+            "font-size:14px;"><a href=
+            "http://www.denvergov.org/Default.aspx?alias=www.denvergov.org/hp2010"
+            style="font-size: 16px;" target="_blank" title=
+            "Denver Healthy People 2010">Denver Healthy People
+            2010</a></span></p>
 
+            <p style="text-align: center;"><span style=
+            "font-size:14px;"><a href=
+            "http://www.denvergov.org/Default.aspx?alias=www.denvergov.org/parksandrecreation"
+            style="font-size: 16px;" target="_blank" title=
+            "Denver Parks and Recreation">Denver Parks and
+            Recreation</a></span></p>
 
+            <p style="text-align: center;"><span style=
+            "font-size:14px;"><a href="http://www.dero.com/" style=
+            "font-size: 16px;" target="_blank" title="Dero Bike Racks">DERO
+            Bike Racks</a></span></p>
 
+            <p style="text-align: center;"><span style=
+            "font-size:14px;"><a href=
+            "http://www.neighborhoodlink.com/Greater_Park_Hill/info" style=
+            "font-size: 16px;" target="_blank" title=
+            "Greater Park Hill Community">Greater Park Hill
+            Community</a></span></p>
 
+            <p style="text-align: center;"><span style=
+            "font-size:14px;"><a href=
+            "http://www.denvergov.org/Boards_and_Commissions/BoardsandCommissions/BoardsandCommissions4/tabid/378947/Default.aspx"
+            style="font-size: 16px;" target="_blank" title=
+            "Mayor's Bicycle Advisory Committee">Mayor's Bicycle Advisory
+            Committee</a></span></p>
 
-<p style="text-align: center;">
-	<span style="font-size:14px;"><a href="http://www.denvergov.org/bikeprogram/BicyclinginDenver/BikeSafety/RegisterYourBike/tabid/442270/Default.aspx" style="font-size: 16px; " target="_blank" title="Register your bike">Register your bike</a></span></p>
-<p style="text-align: center;">
-	<span style="font-size:14px;"><a href="http://www.bikedenver.org/" style="font-size: 16px; " target="_blank" title="Bike Denver">Bike Denver</a></span></p>
-<p style="text-align: center;">
-	<span style="font-size:14px;"><a href="http://www.neighborhoodlink.com/Greater_Park_Hill/pages/60427" style="font-size: 16px; " target="_blank" title="Hiawatha Davis Recreation Center">Hiawatha Davis Recreation Center</a></span></p>
-<p style="text-align: center;">
-	<span style="font-size:14px;"><a href="http://www.denvergov.org/Default.aspx?alias=www.denvergov.org/hp2010" style="font-size: 16px; " target="_blank" title="Denver Healthy People 2010">Denver Healthy People 2010</a></span></p>
-<p style="text-align: center;">
-	<span style="font-size:14px;"><a href="http://www.denvergov.org/Default.aspx?alias=www.denvergov.org/parksandrecreation" style="font-size: 16px; " target="_blank" title="Denver Parks and Recreation">Denver Parks and Recreation</a></span></p>
-<p style="text-align: center;">
-	<span style="font-size:14px;"><a href="http://www.dero.com/" style="font-size: 16px; " target="_blank" title="Dero Bike Racks">DERO Bike Racks</a></span></p>
-<p style="text-align: center;">
-	<span style="font-size:14px;"><a href="http://www.neighborhoodlink.com/Greater_Park_Hill/info" style="font-size: 16px; " target="_blank" title="Greater Park Hill Community">Greater Park Hill Community</a></span></p>
-<p style="text-align: center;">
-	<span style="font-size:14px;"><a href="http://www.denvergov.org/Boards_and_Commissions/BoardsandCommissions/BoardsandCommissions4/tabid/378947/Default.aspx" style="font-size: 16px; " target="_blank" title="Mayor's Bicycle Advisory Committee">Mayor's Bicycle Advisory Committee</a></span></p>
-<p style="text-align: center;">
-	<span style="font-size:14px;"><a href="http://www.denvergov.org/TabId/388288/default.aspx" style="font-size: 16px; " target="_blank" title="Park Hill Thriving Communities">Park Hill Thriving Communities</a></span></p>
-<p style="text-align: center;">
-	<span style="font-size:14px;"><a href="http://www.recyclebicycles.net/" style="font-size: 16px; " target="_blank" title="Recycle Bicycles">Recycle Bicycles</a></span></p>
-<p style="text-align: center;">
-	<span style="font-size:16px;"><a href="http://www.localbiketrader.com/links/bicycle_co_ops.htm" target="_blank">Bicycle Trader</a></span></p>
- 
-	
-</div>
+            <p style="text-align: center;"><span style=
+            "font-size:14px;"><a href=
+            "http://www.denvergov.org/TabId/388288/default.aspx" style=
+            "font-size: 16px;" target="_blank" title=
+            "Park Hill Thriving Communities">Park Hill Thriving
+            Communities</a></span></p>
 
-	</div>
+            <p style="text-align: center;"><span style=
+            "font-size:14px;"><a href="http://www.recyclebicycles.net/" style=
+            "font-size: 16px;" target="_blank" title="Recycle Bicycles">Recycle
+            Bicycles</a></span></p>
+
+            <p style="text-align: center;"><span style=
+            "font-size:16px;"><a href=
+            "http://www.localbiketrader.com/links/bicycle_co_ops.htm" target=
+            "_blank">Bicycle Trader</a></span></p>
+        </div>
+    </div>
