--- a/lib/app/views/JamesPullen.erb
+++ b/lib/app/views/JamesPullen.erb
@@ -1,27 +1,21 @@
-<div id="content-w2">	
-		
-		
+<div id="content-w2">
+        <div id="system-message-container"></div>
 
-		
-		
-<div id="system-message-container">
-</div>
-		<div class="item-page">
+        <div class="item-page">
+            <h2>James Pullen</h2>
 
-	<h2>
-			James Pullen		</h2>
-
-
-
-
-
-
-
-
-<p style="text-align: justify;">
-	<span style="font-size:14px;"><em style="margin: 0px; padding: 0px; border: 0px; font: inherit; vertical-align: baseline; font-family: Helvetica, Arial, sans-serif; line-height: 20.46666717529297px; background-color: rgb(255, 255, 250); ">James is a long time bike enthusiast who cut his teeth on wrenching in the co-ops and community shops of Portland, OR and when not working on bikes he will occasionally ride them.  A native of the great state of Maine, James received his BS Ed. in Career/Technical &amp; Technology Education along with Minor in Art Education from the University of Idaho in 2010.  His dream is to someday set up a High School Trade’s Program with a focus on Wood &amp; Metal Work and Bicycle Mechanics.  It could happen.  His wife Jeneve and little dog Charlie are the center of his universe.</em></span></p>
- 
-	
-</div>
-
-	</div>
+            <p style="text-align: justify;"><span style=
+            "font-size:14px;"><em style=
+            "margin: 0px; padding: 0px; border: 0px; font: inherit; vertical-align: baseline; font-family: Helvetica, Arial, sans-serif; line-height: 20.46666717529297px; background-color: rgb(255, 255, 250);">
+            James is a long time bike enthusiast who cut his teeth on wrenching
+            in the co-ops and community shops of Portland, OR and when not
+            working on bikes he will occasionally ride them.&nbsp; A native of
+            the great state of Maine, James received his BS Ed. in
+            Career/Technical &amp; Technology Education along with Minor in Art
+            Education from the University of Idaho in 2010. &nbsp;His dream is
+            to someday set up a High School Trade’s Program with a focus on
+            Wood &amp; Metal Work and Bicycle Mechanics.&nbsp; It could happen.
+            &nbsp;His wife Jeneve and little dog Charlie are the center of his
+            universe.</em></span></p>
+        </div>
+    </div>
