--- a/lib/app/views/MikeDecker.erb
+++ b/lib/app/views/MikeDecker.erb
@@ -1,27 +1,15 @@
-<div id="content-w2">	
-		
-		
+ <div id="content-w2">
+        <div id="system-message-container"></div>
 
-		
-		
-<div id="system-message-container">
-</div>
-		<div class="item-page">
+        <div class="item-page">
+            <h2>Mike Decker</h2>
 
-	<h2>
-			Mike Decker		</h2>
-
-
-
-
-
-
-
-
-<p style="text-align: justify;">
-	<span style="font-size:14px;">Mike has been a committed bike commuter for 17 years and has never owned a car. Originally from Northern Michigan, he finds Denver’s weather much friendlier for two wheel pedalin’ than his sub-Arctic homeland. Since joining the Bike Depot he’s leveled up his mechanic skills and somehow found himself in possession of four bikes. He’s also the owner of a really annoying cat.</span></p>
- 
-	
-</div>
-
-	</div>
+            <p style="text-align: justify;"><span style="font-size:14px;">Mike
+            has been a committed bike commuter for 17 years and has never owned
+            a car. Originally from Northern Michigan, he finds Denver’s weather
+            much friendlier for two wheel pedalin’ than his sub-Arctic
+            homeland. Since joining the Bike Depot he’s leveled up his mechanic
+            skills and somehow found himself in possession of four bikes. He’s
+            also the owner of a really annoying cat.</span></p>
+        </div>
+    </div>
