--- a/lib/app/views/Support.erb
+++ b/lib/app/views/Support.erb
@@ -1,43 +1,73 @@
-<div id="content-w2">	
-		
-		
+<div id="content-w2">
+        <div id="system-message-container"></div>
 
-		
-		
-<div id="system-message-container">
-</div>
-		<div class="item-page">
+        <div class="item-page">
+            <h2>Support</h2>
 
-	<h2>
-			Support		</h2>
+            <p style="text-align: justify;"><span style="font-size: 20px;">How
+            Can I Help?</span></p>
 
+            <p style="text-align: justify;">&nbsp;</p>
 
+            <p style="text-align: justify;"><span style=
+            "font-size:14px;"><strong><span style=
+            "font-size: 16px; text-decoration: underline">Financial
+            Support</span> -</strong>&nbsp;Support the Bike Depot by becoming a
+            Member or making a <a href=
+            "https://www.givingfirst.orgerb?section=organizations&amp;action=newDonation&amp;fwID=27598"
+            target="_blank">cash donation</a>.&nbsp;</span></p>
 
+            <p style="text-align: justify;"><span style="font-size:14px;">A
+            Bike Depot Membership supports the Bike Depot financially, plus you
+            get valuable membership benefits, which can include discounts and
+            access to member-only nights with use of the bike shop and access
+            to professional mechanics and tools.</span></p>
 
+            <p style="text-align: justify;"><span style=
+            "font-size:14px;">Membership and donation dollars directly fund the
+            programs and operations that we provide to the community.&nbsp;
+            Without the financial support of our members and donors, we cannot
+            achieve our mission of making bicycling possible for
+            everyone.&nbsp; Click here for details on&nbsp;<a href=
+            "http://www.thebikedepot.org/betasiteerb/support/memberships"
+            target="_blank">Membership&nbsp;levels and benefits</a>.</span></p>
 
+            <p style="text-align: justify;">&nbsp;</p>
 
+            <p style="text-align: justify;"><span style=
+            "font-size:14px;"><span style=
+            "font-size: 16px; text-decoration: underline"><strong>Volunteer
+            Your Time</strong></span> - The Bike Depot is a volunteer-driven
+            organization.&nbsp; All that we do would not be possible without
+            the generous donation of time from our volunteers.&nbsp; We have a
+            wide variety of opportunities for you to help-out.&nbsp; Of course,
+            there are always bikes to be worked on, but we also have a need for
+            general office help, organizing, marketing, fundraising, event
+            planning, etc.&nbsp; If you’ve got some time, we can put it to good
+            use! Click here for more details on becoming a Bike
+            Depot&nbsp;<a href="erb/support/volunteer/21-new-volunteers"
+            target="_blank">Volunteer</a>.</span></p>
 
+            <p style="text-align: justify;">&nbsp;</p>
 
-<p style="text-align: justify;">
-	<span style="font-size: 20px; ">How Can I Help?</span></p>
-<p style="text-align: justify;">
-	 </p>
-<p style="text-align: justify;">
-	<span style="font-size:14px;"><strong><span style="font-size:16px;"><u>Financial Support</u></span> -</strong> Support the Bike Depot by becoming a Member or making a <a href="https://www.givingfirst.orgerb?section=organizations&amp;action=newDonation&amp;fwID=27598" target="_blank">cash donation</a>. </span></p>
-<p style="text-align: justify;">
-	<span style="font-size:14px;">A Bike Depot Membership supports the Bike Depot financially, plus you get valuable membership benefits, which can include discounts and access to member-only nights with use of the bike shop and access to professional mechanics and tools.</span></p>
-<p style="text-align: justify;">
-	<span style="font-size:14px;">Membership and donation dollars directly fund the programs and operations that we provide to the community.  Without the financial support of our members and donors, we cannot achieve our mission of making bicycling possible for everyone.  Click here for details on <a href="http://www.thebikedepot.org/betasiteerb/support/memberships" target="_blank">Membership levels and benefits</a>.</span></p>
-<p style="text-align: justify;">
-	 </p>
-<p style="text-align: justify;">
-	<span style="font-size:14px;"><span style="font-size:16px;"><u><strong>Volunteer Your Time</strong></u></span> - The Bike Depot is a volunteer-driven organization.  All that we do would not be possible without the generous donation of time from our volunteers.  We have a wide variety of opportunities for you to help-out.  Of course, there are always bikes to be worked on, but we also have a need for general office help, organizing, marketing, fundraising, event planning, etc.  If you’ve got some time, we can put it to good use! Click here for more details on becoming a Bike Depot <a href="erb/support/volunteer/21-new-volunteers" target="_blank">Volunteer</a>.</span></p>
-<p style="text-align: justify;">
-	 </p>
-<p style="text-align: justify;">
-	<span style="font-size:14px;"><span style="font-size:16px;"><strong><u>Donate your used bicycles, bicycle parts, accessories and child trailers</u></strong></span> - Each year, the Bike Depot takes in hundreds of bikes from people like you, whips them into shape and finds them a new home in the community.  We’d love to help your old bike make someone very happy.  We accept bikes in any condition; parts and accessories too.  We are committed to reusing and recycling, so if it can’t be used – it will be recycled if at all possible.  We are also in need of items to help with our operation. This includes tools, equipment, supplies and other items. Click here for more information about <a href="erb/support/donate-bikes" target="_blank">Donating Bikes</a>, <a href="erb/support/organizing-a-bike-collection-drive" target="_blank">Organizing a Bike Collection Drive</a> and please check out our current <a href="erb/support/wish-list" target="_blank">Wish List</a>.</span></p>
- 
-	
-</div>
-
-	</div>
+            <p style="text-align: justify;"><span style=
+            "font-size:14px;"><span style="font-size:16px;"><strong style=
+            "text-decoration: underline">Donate your used bicycles, bicycle
+            parts, accessories and child trailers</strong></span> - Each year,
+            the Bike Depot takes in hundreds of bikes from people like you,
+            whips them into shape and finds them a new home in the
+            community.&nbsp; We’d love to help your old bike make someone very
+            happy.&nbsp; We accept bikes in any condition; parts and
+            accessories too.&nbsp; We are committed to reusing and recycling,
+            so if it can’t be used – it will be recycled if at all
+            possible.&nbsp; We are also in need of items to help with our
+            operation. This includes tools, equipment, supplies and other
+            items. Click here for more information about&nbsp;<a href=
+            "erb/support/donate-bikes" target="_blank">Donating
+            Bikes</a>,&nbsp;<a href=
+            "erb/support/organizing-a-bike-collection-drive" target=
+            "_blank">Organizing a Bike Collection Drive</a>&nbsp;and please
+            check out&nbsp;our current&nbsp;<a href="erb/support/wish-list"
+            target="_blank">Wish List</a>.</span></p>
+        </div>
+    </div>
