--- a/lib/app/views/Volunteer.erb
+++ b/lib/app/views/Volunteer.erb
@@ -1,110 +1,106 @@
-<div id="content-w2">	
-		
-		
+<div id="content-w2">
+        <div id="system-message-container"></div>
 
-		
-		
-<div id="system-message-container">
-</div>
-		<div class="blog">
+        <div class="blog">
+            <div class="items-leading">
+                <div class="leading-0">
+                    <h2>New Volunteers</h2>
 
-	
+                    <p style="text-align: justify;"><span style=
+                    "font-size:12px;">We need volunteers of all stripes and
+                    abilities to help us fulfill our mission and keep quality
+                    bikes rolling out of our shop.&nbsp; When you give your
+                    valuable time and skills to the Bike Depot, you are
+                    impacting kids and adults and helping to spread biking
+                    throughout Denver.&nbsp;</span></p>
 
+                    <p style="text-align: justify;"><span style=
+                    "font-size:12px;">No previous mechanical knowledge is
+                    required!&nbsp; We need folks to help with marketing,
+                    design, website, fundraising, greeting, sorting, cleaning,
+                    Craigslist posting, data entry, etc.&nbsp; The Bike Depot
+                    is almost completely staffed by volunteers and it is their
+                    generous support that keeps us running and getting bikes
+                    into the hands of those in our community that need
+                    them.</span></p>
 
+                    <div><img alt="" src=
+                    "/images/Photos/change%20picture%20bank%20127.gif" style=
+                    "height: 155px; width: 150px; margin-left: 20px; margin-right: 20px; float: left;"></div>
 
+                    <p>&nbsp;</p>
 
+                    <p><span style="font-size:16px;"><strong>NEW
+                    VOLUNTEERS&nbsp;</strong></span></p>
 
-<div class="items-leading">
-			<div class="leading-0">
-			
-	<h2>
-					New Volunteers			</h2>
+                    <p><span style="font-size:14px;">Volunteering is easy as
+                    1-2-3!&nbsp;</span></p>
 
+                    <p><span style="font-size:14px;">1. Fill out the <a href=
+                    "http://app.volunteer2.com/Public/SignUp?organizationGUID=1a32e143-de77-4ddf-8c9b-1b1ef9cfac44&amp;signupFormId=1">
+                    APPLICATION</a></span></p>
 
+                    <p><span style="font-size:14px;">2. Attend
+                    orientation</span></p>
 
+                    <p><span style="font-size:14px;">3. Come for your first
+                    shift or begin your project</span></p>
 
+                    <p class="readmore"><a href=
+                    "erb/support/volunteer/21-new-volunteers">Please read more
+                    to explore the details of volunteering</a></p>
 
-<p style="text-align: justify;">
-	<span style="font-size:12px;">We need volunteers of all stripes and abilities to help us fulfill our mission and keep quality bikes rolling out of our shop.  When you give your valuable time and skills to the Bike Depot, you are impacting kids and adults and helping to spread biking throughout Denver. </span></p>
-<p style="text-align: justify;">
-	<span style="font-size:12px;">No previous mechanical knowledge is required!  We need folks to help with marketing, design, website, fundraising, greeting, sorting, cleaning, Craigslist posting, data entry, etc.  The Bike Depot is almost completely staffed by volunteers and it is their generous support that keeps us running and getting bikes into the hands of those in our community that need them.</span></p>
-<div>
-	<img alt="" src="/images/Photos/change%20picture%20bank%20127.gif" style="height: 155px; width: 150px; margin-left: 20px; margin-right: 20px; float: left; ">
-</div>
-<p>
-	 </p>
-<p>
-	<span style="font-size:16px;"><strong>NEW VOLUNTEERS </strong></span></p>
-<p>
-	<span style="font-size:14px;">Volunteering is easy as 1-2-3! </span></p>
-<p>
-	<span style="font-size:14px;">1. Fill out the <a href="http://app.volunteer2.com/Public/SignUp?organizationGUID=1a32e143-de77-4ddf-8c9b-1b1ef9cfac44&amp;signupFormId=1">APPLICATION</a></span></p>
-<p>
-	<span style="font-size:14px;">2. Attend orientation</span></p>
-<p>
-	<span style="font-size:14px;">3. Come for your first shift or begin your project</span></p>
+                    <div class="item-separator"></div>
+                </div>
+            </div>
 
-		<p class="readmore">
-				<a href="erb/support/volunteer/21-new-volunteers">
-					Please read more to explore the details of volunteering</a>
-		</p>
+            <div class="items-row cols-2 row-0">
+                <div class="item column-1">
+                    <h2>Community Service</h2>
 
+                    <p style="text-align: justify;"><span style=
+                    "font-size:14px;">If you are fulfilling school or court
+                    mandated community service, please fill out <a href=
+                    "https://app.volunteer2.com/Public/SignUp?organizationGUID=1a32e143-de77-4ddf-8c9b-1b1ef9cfac44&amp;signupFormId=2"
+                    target="_blank">this application.</a>&nbsp; Do not fill out
+                    the standard application.&nbsp; We have very limited
+                    community service opportunities and cannot guarantee you
+                    will get the shifts you want.&nbsp; Because of this limited
+                    availability and high demand for shifts, if you miss a
+                    shift without calling in or habitually call in for shifts
+                    you will not be able to complete your service with
+                    us.</span></p>
 
-<div class="item-separator"></div>
-		</div>
-			</div>
+                    <p style="text-align: justify;"><span style=
+                    "font-size:14px;"><a href=
+                    "https://app.volunteer2.com/Public/SignUp?organizationGUID=1a32e143-de77-4ddf-8c9b-1b1ef9cfac44&amp;signupFormId=2"
+                    target="_blank">Community Service
+                    Application</a></span></p>
 
-			<div class="items-row cols-2 row-0">
-		<div class="item column-1">
-		
-	<h2>
-					Community Service			</h2>
+                    <div class="item-separator"></div>
+                </div>
 
+                <div class="item column-2">
+                    <h2>Current Volunteers</h2>
 
+                    <p><span style="font-size:14px;">As always, thank you so
+                    much for all you do.&nbsp; The Bike Depot wouldn't be
+                    possible without it!</span></p>
 
+                    <p><a href=
+                    "https://app.volunteer2.com/Public/Login/Volunteer" style=
+                    "font-size: 14px;" target="_blank">Click here to log your
+                    hours and sign up for shifts</a></p>
 
+                    <p>&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<img alt="" src=
+                    "/images/Photos/208835_10150852389431150_547393803_n.jpg"
+                    style=
+                    "height: 225px; width: 300px; float: left; margin-left: 10px; margin-right: 10px;"></p>
 
-<p style="text-align: justify;">
-	<span style="font-size:14px;">If you are fulfilling school or court mandated community service, please fill out <a href="https://app.volunteer2.com/Public/SignUp?organizationGUID=1a32e143-de77-4ddf-8c9b-1b1ef9cfac44&amp;signupFormId=2" target="_blank">this application.</a>  Do not fill out the standard application.  We have very limited community service opportunities and cannot guarantee you will get the shifts you want.  Because of this limited availability and high demand for shifts, if you miss a shift without calling in or habitually call in for shifts you will not be able to complete your service with us.</span></p>
-<p style="text-align: justify;">
-	<span style="font-size:14px;"><a href="https://app.volunteer2.com/Public/SignUp?organizationGUID=1a32e143-de77-4ddf-8c9b-1b1ef9cfac44&amp;signupFormId=2" target="_blank">Community Service Application</a></span></p>
+                    <p>&nbsp;</p>
 
-
-
-<div class="item-separator"></div>
-	</div>
-					<div class="item column-2">
-		
-	<h2>
-					Current Volunteers			</h2>
-
-
-
-
-
-<p>
-	<span style="font-size:14px;">As always, thank you so much for all you do.  The Bike Depot wouldn't be possible without it!</span></p>
-<p>
-	<a href="https://app.volunteer2.com/Public/Login/Volunteer" style="font-size: 14px;" target="_blank">Click here to log your hours and sign up for shifts</a></p>
-<p>
-	        <img alt="" src="/images/Photos/208835_10150852389431150_547393803_n.jpg" style="height: 225px; width: 300px; float: left; margin-left: 10px; margin-right: 10px; "></p>
-<p>
-	 </p>
-
-
-
-<div class="item-separator"></div>
-	</div>
-						<span class="row-separator"></span>
-				</div>
-
-				
-
-
-
-
-	
-
-</div>
-
-	</div>
+                    <div class="item-separator"></div>
+                </div><span class="row-separator"></span>
+            </div>
+        </div>
+    </div>
