--- a/lib/app/views/Links.erb
+++ b/lib/app/views/Links.erb
@@ -1,27 +1,14 @@
-<div id="content-w2">	
-		
-		
+<div id="content-w2">
+        <div id="system-message-container"></div>
 
-		
-		
-<div id="system-message-container">
-</div>
-		<div class="item-page">
+        <div class="item-page">
+            <h2>Links</h2>
 
-	<h2>
-			Links		</h2>
-
-
-
-
-
-
-
-
-<p>
-	<span style="font-size:14px;">Please check out our <a href="erb/links/31-links/business-partners/29-business-partners">Business Partners</a>, <a href="erb/links/32-links/friends/30-friends">Friends</a> and businesses that <a href="erb/links/33-links/we-love/31-we-love">We Love...</a></span></p>
- 
-	
-</div>
-
-	</div>
+            <p><span style="font-size:14px;">Please check out our&nbsp;<a href=
+            "erb/links/31-links/business-partners/29-business-partners">Business
+            Partners</a>,&nbsp;<a href=
+            "erb/links/32-links/friends/30-friends">Friends</a>&nbsp;and
+            businesses that&nbsp;<a href=
+            "erb/links/33-links/we-love/31-we-love">We Love...</a></span></p>
+        </div>
+    </div>
