--- a/lib/app/views/MorganMatter.erb
+++ b/lib/app/views/MorganMatter.erb
@@ -1,27 +1,17 @@
-<div id="content-w2">	
-		
-		
+<div id="content-w2">
+        <div id="system-message-container"></div>
 
-		
-		
-<div id="system-message-container">
-</div>
-		<div class="item-page">
+        <div class="item-page">
+            <h2>Morgan Matter</h2>
 
-	<h2>
-			Morgan Matter		</h2>
-
-
-
-
-
-
-
-
-<p style="text-align: justify;">
-	<span style="font-size:14px;">Morgan has been pedaling the streets of Denver since she learned to ride on two wheels.<span style="">  </span>As a founding member of the Derailer Bicycle Collective, she has been in the business of resurrecting bicycles for nearly a decade.<span style="">  </span>When not tethered to the repair stand she dreams of once again hitting the highway, panniers loaded<span style=""> </span>and ready for adventure.<span style="">  </span></span></p>
- 
-	
-</div>
-
-	</div>
+            <p style="text-align: justify;"><span style=
+            "font-size:14px;">Morgan has been pedaling the streets of Denver
+            since she learned to ride on two wheels.<span style=
+            "">&nbsp;</span> As a founding member of the Derailer Bicycle
+            Collective, she has been in the business of resurrecting bicycles
+            for nearly a decade.<span style="">&nbsp;</span> When not tethered
+            to the repair stand she dreams of once again hitting the highway,
+            panniers loaded <span style=""></span>and ready for
+            adventure.<span style="">&nbsp;</span></span></p>
+        </div>
+    </div>
